--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,7 +9,7 @@ lint:
   name: yamllint
 platforms:
   - name: instance
-    box: ubuntu/xenial64
+    box: debian/stretch64
 provisioner:
   name: ansible
   lint:
