Pasamos a variables de ansible las variables de entorno de los contenedores

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -3,5 +3,7 @@
   become: true
   become_method: sudo
   hosts: all
+  vars:
+    nextcloud_url: http://192.168.56.20:10080
   roles:
-    - role: nextcloud
+    - { role: nextcloud, tags: ['nextcloud'] }
