--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,16 @@
 ---
-# defaults file for nextcloud
+nextcloud_debug: false
+nextcloud_tz: Europe/Madrid
+nextcloud_db_type: pgsql
+nextcloud_db_host: postgresql
+nextcloud_db_user: nextcloud
+nextcloud_db_pass: password
+nextcloud_db_name: nextcloud_db
+nextcloud_url: http://cloud.example.com:10080
+nextcloud_admin_user: admin
+nextcloud_admin_password: admin
+nextcloud_upload_max_filesize: 4G
+nextcloud_max_file_uploads: 20
+nextcloud_backups_expiry: 0
+nextcloud_php_fpm_host: nextcloud
+nextcloud_php_fpm_port: 9000
