--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,6 +10,11 @@ lint:
 platforms:
   - name: instance
     box: debian/stretch64
+    interfaces:
+      - auto_config: true
+        network_name: private_network
+        type: static
+        ip: 192.168.56.20
 provisioner:
   name: ansible
   lint:
