--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,5 +14,6 @@ nextcloud_max_file_uploads: 20
 nextcloud_backups_expiry: 0
 nextcloud_php_fpm_host: nextcloud
 nextcloud_php_fpm_port: 9000
+nextcloud_external_port: 10080
 nextcloud_data_dir_postgresql: /srv/docker/nextcloud/postgresql
 nextcloud_data_dir_nextcloud: /srv/docker/nextcloud/nextcloud
