--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -53,7 +53,7 @@
       NEXTCLOUD_PHP_FPM_HOST: "{{ nextcloud_php_fpm_host }}"
       NEXTCLOUD_PHP_FPM_PORT: "{{ nextcloud_php_fpm_port }}"
     ports:
-      - "10080:80"
+      - "{{ nextcloud_external_port }}:80"
     links:
       - nextcloud
     log_driver: "{{ nextcloud_log_driver | default(omit) }}"
