--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,5 +15,7 @@ nextcloud_backups_expiry: 0
 nextcloud_php_fpm_host: nextcloud
 nextcloud_php_fpm_port: 9000
 nextcloud_external_port: 10080
+nextcloud_ports:
+  - "{{ nextcloud_external_port }}:80"
 nextcloud_data_dir_postgresql: /srv/docker/nextcloud/postgresql
 nextcloud_data_dir_nextcloud: /srv/docker/nextcloud/nextcloud
