--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,7 +12,11 @@ galaxy_info:
   company: "Callepuzzle"
   license: "license (BSD, MIT)"
   min_ansible_version: 2.7
+galaxy_tags:
+    - nextcloud
+    - docker
+    - container
   platforms:
     - name: Debian
       versions:
-        - 9
+        - stretch
