--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,9 @@ nextcloud_db_user: nextcloud
 nextcloud_db_pass: password
 nextcloud_db_name: nextcloud_db
 
+mysql_root_password: mysql
+mysql_image_version: 10.5
+
 nextcloud_table_prefix: ""
 
 nextcloud_version: 15
