--- a/molecule/docker/molecule.yml
+++ b/molecule/docker/molecule.yml
@@ -3,22 +3,17 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
 platforms:
   - name: instance
     image: debian:stretch
+    pre_build_image: true
     privileged: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
       - /var/run/docker.sock:/var/run/docker.sock
 provisioner:
   name: ansible
-  lint:
-    name: ansible-lint
+verifier:
+  name: ansible
 scenario:
   name: docker
-verifier:
-  name: testinfra
-  lint:
-    name: flake8
