--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Update pip, install molecule, test
         run: |
           python -m pip install --upgrade pip
-          pip install "molecule[docker]"
+          pip install molecule[docker,lint] ansible-core
           molecule converge -s docker
